# mikegchambers.github.io

./: .gitignore  CNAME  README.md  _config.yml  index.md  past_content.txt
_data/: contact.yml  projects.yml
_includes/: sidebar.html
_layouts/: post.html
_posts/: 2023-08-18-fast-pre-trained-model-deployment-the-code-only-approach.md  2023-09-28-integrating-foundation-models-into-your-code-with-amazon-bed.md  2023-11-16-learn-to-create-generative-ai-apps-with-partyrock-its-party-.md  2023-11-22-generative-ai-how-it-applies-to-developers.md  2023-11-23-amazon-bedrock-what-are-tokens.md  2023-11-24-amazon-bedrock-your-top-questions-answered.md  2023-11-24-serverless-generative-ai-amazon-bedrock-running-in-lambda.md  2024-02-19-what-is-an-instruct-model-instruction-and-chat-fine-tuning.md  2024-02-26-mistral-ai-winds-of-change.md  2024-03-14-watch-hands-on-with-haiku-on-amazon-bedrock.md  2024-03-20-improve-your-generative-ai-application-with-rag.md  2024-04-23-integrating-generative-ai-models-with-amazon-bedrock.md  2024-04-24-agents-tools-function-calling-with-amazon-bedrock-how-to.md  2024-07-18-ai-running-its-own-code-agentic-code-interpreter.md  2024-07-18-solving-llm-amnesia-cross-session-memory.md  2024-10-01-supercharge-your-browser-unleashing-ai-powered-tampermonkey.md  2024-10-02-im-learning-can-i-automate-the-build-amazon-bedrock-knowledg.md  2024-10-24-claude-rickrolled-me-sonnet-35-v2-computer-control.md  2024-11-01-can-i-really-order-a-pizza-with-claude-sonnet-35-computer-us.md  (+33 more)
_tabs/: about.md  projects.md
tools/new-post/: new_post.py  pyproject.toml
(+5 files in other folders)
